<resources>
    <string name="app_name">FirebaseMLKitDemo</string>

    <string name="text_recognition">Text recognition</string>
    <string name="face_detection">Face detection</string>
    <string name="object_detection_tracking">Object detection and tracking</string>
    <string name="image_labeling">Image labeling</string>
    <string name="automl">AutoML Vision Edge</string>
    <string name="barcode_scanning">Barcode scanning</string>
    <string name="landmark_recognition">Landmark recognition</string>
    <string name="lang_id">Language ID</string>
    <string name="on_device_translation">On-device translation</string>
    <string name="smart_reply">Smart Reply</string>

    <string name="text_recognition_desc">Recognize and extract text from images</string>
    <string name="face_detection_desc">Detect faces and facial landmarks, now with Face Contours</string>
    <string name="object_detection_tracking_desc">Detect, track and classify objects in live camera and static images</string>
    <string name="image_labeling_desc">Identify objects, locations, activities, animal species, products, and more</string>
    <string name="automl_desc">Train and publish your own image classification models</string>
    <string name="barcode_scanning_desc">Scan and process barcodes</string>
    <string name="landmark_recognition_desc">Identify popular landmarks in an image</string>
    <string name="lang_id_desc">Detect the language of text</string>
    <string name="on_device_translation_desc">Translate text from one language to another</string>
    <string name="smart_reply_desc">Generate text replies based on previous messages</string>


    <string name="action_gallery">Gallery</string>
    <string name="action_camera">Camera</string>
    <string name="confirm_permission">This app need to access files on your device.</string>
    <string name="confirm_camera">This app need to access camera on your device.</string>

    <string name="profile_item_email_header">Email</string>
    <string name="profile_item_phone_header">Cellphone Number</string>
    <string name="profile_item_password_header">Change Password</string>
    <string name="profile_item_email_details">sample@gmail.com</string>
    <string name="profile_item_phone_details">+1 40425 50505</string>
    <string name="profile_item_password_details">Tap to change password</string>

    <string name="error_detect">Nothing detected</string>


    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="label_phone_auth">Phone Authentication</string>
    <string name="label_manage_user">Manage User</string>

    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="load">Loading…</string>
    <string name="signed_out">Signed Out</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_photo">Photo URL</string>

    <string name="logout">Logout?</string>
    <string name="anonymous_signin">Anonymous Sign In</string>
    <string name="account_link">Account Linking</string>
    <string name="account_link_btn">Link Account</string>
    <string name="title_provider">User\'s provider</string>
    <string name="title_profile">User\'s profile</string>
    <string name="title_update_profile">Update user\'s profile</string>
    <string name="title_update_email">Update user\'s email</string>
    <string name="title_update_password">Update user\'s password</string>
    <string name="title_send_password_reset">Send password reset</string>
    <string name="title_delete_user">Delete a user</string>
    <string name="updated">%s updated.</string>
    <string name="verify">Verify</string>

    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>

    <string name="language_identification_hint">Fill in your text here…</string>
    <string name="language_identification_btn1">Detect Language</string>
    <string name="language_identification_btn2">Detect Languages</string>
    <string name="language_identification_result">Language: %s</string>
    <string name="language_identification_error">Can’t identify language.</string>

    <string name="smart_reply_btn">Suggest Me Replying Messages</string>
    <string name="smart_reply_error">The conversation\'s language isn\'t supported, so the result doesn\'t contain any suggestions.</string>

    <string name="btn_device">Device</string>
    <string name="btn_cloud">Cloud</string>
    <string name="error_not_found">No text found</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_documentation">Documentation</string>
    <string name="menu_contribute">Contribute</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_about">About Us</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_rate">Rate us</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="anonymous">Anonymous</string>
    <string name="developersk">Shivam Kumar</string>
    <string name="designermr">Mohit Ranjan</string>
</resources>
