<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_documentation"
            android:icon="@drawable/ic_action_documentation"
            android:title="@string/menu_documentation" />
        <item
            android:id="@+id/nav_contribute"
            android:icon="@drawable/ic_action_contribute"
            android:title="@string/menu_contribute" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_action_feedback"
                android:title="@string/menu_feedback" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_action_rate"
                android:title="@string/menu_rate" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_action_about"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
