<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FaceDetectionActivity"
    tools:ignore="MissingConstraints">

    <ImageView
        android:id="@+id/ivEmail"
        style="@style/profile_item_icon"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_gmail"
        app:layout_constraintTop_toBottomOf="@+id/ivProfile" />

    <ImageView
        android:id="@+id/ivPhone"
        style="@style/profile_item_icon"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/ic_mobile_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

    <ImageView
        android:id="@+id/ivChangePassword"
        style="@style/profile_item_icon"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/ic_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPhone" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="Click Below👇"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ivProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvEmailHeader"
        style="@style/profile_item_header"
        android:text="@string/profile_item_email_header"
        app:layout_constraintStart_toEndOf="@+id/ivEmail"
        app:layout_constraintTop_toTopOf="@+id/ivEmail" />

    <TextView
        android:id="@+id/tvEmail"
        style="@style/profile_item_details"
        android:text="@string/profile_item_email_details"
        app:layout_constraintStart_toEndOf="@+id/ivEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvEmailHeader" />

    <TextView
        android:id="@+id/tvPhoneHeader"
        style="@style/profile_item_header"
        android:text="@string/profile_item_phone_header"
        app:layout_constraintStart_toEndOf="@+id/ivPhone"
        app:layout_constraintTop_toTopOf="@+id/ivPhone" />

    <TextView
        android:id="@+id/tvPhone"
        style="@style/profile_item_details"
        android:text="@string/profile_item_phone_details"
        app:layout_constraintStart_toEndOf="@+id/ivPhone"
        app:layout_constraintTop_toBottomOf="@+id/tvPhoneHeader" />

    <TextView
        android:id="@+id/tvChangePasswordHeader"
        style="@style/profile_item_header"
        android:text="@string/profile_item_password_header"
        app:layout_constraintStart_toEndOf="@+id/ivChangePassword"
        app:layout_constraintTop_toTopOf="@+id/ivChangePassword" />

    <TextView
        android:id="@+id/tvChangePassword"
        style="@style/profile_item_details"
        android:text="@string/profile_item_password_details"
        app:layout_constraintStart_toEndOf="@+id/ivChangePassword"
        app:layout_constraintTop_toBottomOf="@+id/tvChangePasswordHeader" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivProfile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="112dp"
        android:src="@drawable/ic_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>