<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/CustomRelativeLayout">

    <ImageView
        android:id="@+id/logo"
        style="@style/CustomLogoImageView"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:id="@+id/email_password_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/email_password_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_password_fields"
        android:orientation="horizontal">

        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:attr/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_in"
            android:theme="@style/ThemeOverlay.MyDarkButton" />

        <Button
            android:id="@+id/email_create_account_button"
            style="?android:attr/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create_account"
            android:theme="@style/ThemeOverlay.MyDarkButton" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/signout_zone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/verify_button"
            style="?android:attr/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/verify"
            android:theme="@style/ThemeOverlay.MyDarkButton"
            android:visibility="gone" />

        <Button
            android:id="@+id/sign_out_button"
            style="?android:attr/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_out"
            android:theme="@style/ThemeOverlay.MyDarkButton" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_sep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_password_buttons"
        android:orientation="horizontal"
        android:weightSum="3"
        android:gravity="center">

        <View
            android:id="@+id/view_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/color_black"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="OR" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_black"
            android:layout_marginTop="5dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:id="@+id/profile"
        style="@style/CustomStatusTextView"
        android:layout_below="@id/logo"
        android:text="@string/app_name" />


    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_sep"
        android:layout_margin="10dp"/>
</RelativeLayout>